versioned_docs/version-22.3/reference/rpk/rpk-redpanda/rpk-redpanda-admin-brokers-decommission.mdx
---
title: rpk redpanda admin brokers decommission
---

<head>
  <meta name="title" content="rpk redpanda admin brokers decommission | Redpanda Docs" />
  <meta name="description" content="rpk redpanda admin brokers decommission" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-admin-brokers-decommission/" />
</head>

Decommission the given broker.

Decommissioning a broker removes it from the cluster.

A decommission request is sent to every broker in the cluster, only the cluster
leader handles the request.

### Usage

```
rpk redpanda admin brokers decommission [BROKER ID] [flags]
```

### Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for decommission.</td>
    </tr>
    <tr>
      <td>--admin-api-tls-cert</td>
      <td>string</td>
      <td>
        The certificate to be used for TLS authentication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-enabled</td>
      <td>-</td>
      <td>
        Enable TLS for the Admin API (not necessary if specifying custom certs).
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-key</td>
      <td>string</td>
      <td>
        The certificate key to be used for TLS authentication with the Admin
        API.
      </td>
    </tr>
    <tr>
      <td>--admin-api-tls-truststore</td>
      <td>string</td>
      <td>
        The truststore to be used for TLS communication with the Admin API.
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        rpk config file, if not set the file will be searched for in the default
        locations.
      </td>
    </tr>
    <tr>
      <td>--hosts</td>
      <td>strings</td>
      <td>
        A comma-separated list of Admin API addresses (&lt;ip&gt;:&lt;port&gt; You must
        specify one for each node.
      </td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
